--- a/_includes/week.html
+++ b/_includes/week.html
@@ -31,6 +31,10 @@
           <small>&nbsp;&nbsp;<a href="{{ event.filled }}">
                 filled</a></small>
           {%- endif -%}
+          {%- if event.slides -%}
+          <small>&nbsp;&nbsp;<a href="{{ event.slides }}">
+                slides</a></small>
+          {%- endif -%}
           {%- if event.code -%}
           <small>&nbsp;&nbsp;<a href="{{ event.code }}">
                 code</a></small>
