--- a/_includes/week.html
+++ b/_includes/week.html
@@ -35,9 +35,9 @@
           <small>&nbsp;&nbsp;<a href="{{ event.slides }}">
                 slides</a></small>
           {%- endif -%}
-          {%- if event.slides -%}
+          {%- if event.ta_slides -%}
           <small>&nbsp;&nbsp;<a href="{{ event.ta_slides }}">
-                slides</a></small>
+                ta_slides</a></small>
           {%- endif -%}
           {%- if event.code -%}
           <small>&nbsp;&nbsp;<a href="{{ event.code }}">
